--- a/package.json
+++ b/package.json
@@ -12,5 +12,11 @@
   "dependencies": {
     "@types/pg": "^8.11.6",
     "pg": "^8.12.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.14.2",
+    "prisma": "^5.15.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   }
 }
